--- a/development/satellite/architecture.mdx
+++ b/development/satellite/architecture.mdx
@@ -284,31 +284,36 @@ For complete implementation details, see [Backend Polling Implementation](/devel
 
 ### Real-Time Event System
 
-**Event Emission with Batching:**
-```
-Satellite Operations          EventBus              Backend
-       │                         │                     │
-       │─── mcp.server.started ──▶│                    │
-       │─── mcp.tool.executed ───▶│ [Queue]            │
-       │─── mcp.client.connected ─▶│                    │
-       │                      [Every 3 seconds]         │
-       │                         │                     │
-       │                         │─── POST /events ───▶│
-       │                         │◀─── 200 OK ─────────│
-```
-
-**Event Features:**
-- **Immediate Emission**: Events emitted when actions occur (not delayed by 30s heartbeat)
-- **Automatic Batching**: Events collected for 3 seconds, then sent as single batch (max 100 events)
-- **Memory Management**: In-memory queue (10,000 event limit) with overflow protection
-- **Graceful Error Handling**: 429 exponential backoff, 400 drops invalid events, 500/network errors retry
-- **10 Event Types**: Server lifecycle, client connections, tool discovery, configuration updates
+The satellite emits typed events for status changes, logs, and tool metadata. Events enable real-time monitoring without polling.
 
 **Difference from Heartbeat:**
 - **Heartbeat** (every 30s): Aggregate metrics, system health, resource usage
-- **Events** (immediate): Point-in-time occurrences, user actions, precise timestamps
+- **Events** (immediate): Point-in-time status updates, precise timestamps
 
-For complete event system documentation, see [Event System](/development/satellite/event-system).
+See [Event Emission](/development/satellite/event-emission) for complete event types, payloads, and batching configuration.
+
+### Status Tracking System
+
+The satellite tracks MCP server installation health through an 11-state status system that drives tool availability and automatic recovery.
+
+**Status Values:**
+- Installation lifecycle: `provisioning`, `command_received`, `connecting`, `discovering_tools`, `syncing_tools`
+- Healthy state: `online` (tools available)
+- Configuration changes: `restarting`
+- Failure states: `offline`, `error`, `requires_reauth`, `permanently_failed`
+
+**Status Integration:**
+- **Tool Filtering**: Tools from non-online servers hidden from discovery
+- **Auto-Recovery**: Offline servers auto-recover when responsive
+- **Event Emission**: Status changes emitted immediately to backend
+
+See [Status Tracking](/development/satellite/status-tracking) for complete status lifecycle and transitions.
+
+### Log Capture System
+
+The satellite captures and batches two types of logs for debugging and monitoring: **server logs** (stderr output) and **request logs** (tool execution with full request/response data).
+
+See [Log Capture](/development/satellite/log-capture) for buffering implementation, batching configuration, backend storage limits, and privacy controls.
 
 ## Security Architecture
 
